# Process this file with automake to produce Makefile.in

# Copyright (C) 2013 COR Entertainment, LLC.

scriptsdir=$(pkgdatadir)/data1/scripts

nobase_dist_scripts_DATA = \
	caustics.rscript \
	consoles.rscript \
	interactive/textures.rscript \
	maps/ctf-extermination2k15.rscript \
	maps/ctf-frost2k15.rscript \
	maps/ctf-violator2k16.rscript \
	maps/dm-babel2k16.rscript \
	maps/dm-bloodfactory2k15.rscript \
	maps/dm-deathray2k16.rscript \
	maps/dm-dismal2k15.rscript \
	maps/dm-dynamo2k16.rscript \
	maps/dm-extermination2k15.rscript \
	maps/dm-gauntlet2k16.rscript \
	maps/dm-neptune2k15.rscript \
	maps/dm-oblivion2k15.rscript \
	maps/dm-purgatory2k16.rscript \
	maps/dm-turbo2k15.rscript \
	maps/dm-violator2k15.rscript \
	maps/dm-wasteland.rscript \
	maps/tac-extermination2k15.rscript \
	maps/tac-impact.rscript \
	menu.rscript \
	normals/desert.rscript \
	normals/gothic.rscript \
	normals/newtech.rscript \
	normals/normals.rscript \
	normals/tundra.rscript \
	normals/undersea.rscript \
	normals/urban.rscript \
	textures.rscript
