# Process this file with automake to produce Makefile.in

# Copyright (C) 2013 COR Entertainment, LLC.

vehiclesdir=$(pkgdatadir)/data1/vehicles

nobase_dist_vehicles_DATA = \
	bomber/bomb.md2 \
	bomber/bomb.tga \
	bomber/console_normal.tga \
	bomber/console.tga \
	bomber/helmet.md2 \
	bomber/skin_normal.tga \
	bomber/skin_fx.tga \
	bomber/skin.tga \
	bomber/tris.md2 \
	bomber/v_wep.md2 \
	bomber/window.md2 \
	deathball/deathball.md2 \
	deathball/deathball.tga \
	deathball/deathmask.tga \
	deathball/skin_fx.tga \
	deathball/skin_normal.tga \
	deathball/skin.tga \
	deathball/v_wep.md2 \
	hover/console_normal.tga \
	hover/console.tga \
	hover/flames.md2 \
	hover/skin_fx.tga \
	hover/skin.jpg \
	hover/skin_normal.tga \
	hover/tris.md2 \
	hover/v_wep.md2 \
	hover/window.md2 \
	jetpack/skin.jpg \
	jetpack/skin_fx.tga \
	jetpack/skin_normal.jpg \
	jetpack/tris.iqm \
	jetpack/tris.skin \
	strafer/console_normal.tga \
	strafer/console.tga \
	strafer/skin_fx.tga \
	strafer/skin_normal.tga \
	strafer/skin.tga \
	strafer/tris.md2 \
	strafer/v_wep.md2 \
	strafer/window.md2
